Add LCD KCAL support, credit to @savoca

--- a/arch/arm64/configs/kinzie_defconfig
+++ b/arch/arm64/configs/kinzie_defconfig
@@ -303,7 +303,7 @@ CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 # CONFIG_ARCH_WANTS_CTXSW_LOGGING is not set
-CONFIG_NR_CPUS=6
+CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
@@ -2395,7 +2395,7 @@ CONFIG_MSM_ISPIF=y
 CONFIG_HI256=y
 # CONFIG_OV5648 is not set
 CONFIG_MT9M114=y
-# CONFIG_OV5645 is not set
+CONFIG_OV5645=y
 # CONFIG_OV7695 is not set
 # CONFIG_SP1628 is not set
 # CONFIG_GC0339 is not set
@@ -2406,7 +2406,7 @@ CONFIG_MT9M114=y
 # CONFIG_OV12830 is not set
 CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
-CONFIG_MSM_FD=y
+#CONFIG_MSM_FD=y
 CONFIG_MSM_VIDC_V4L2=y
 # CONFIG_MSM_VIDC_VMEM is not set
 # CONFIG_MSM_WFD is not set
@@ -3210,7 +3210,7 @@ CONFIG_LEDS_ISL98611=y
 CONFIG_LEDS_QPNP=y
 CONFIG_LEDS_QPNP_FLASH=y
 # CONFIG_LEDS_QPNP_WLED is not set
-# CONFIG_LEDS_MSM_GPIO_FLASH is not set
+CONFIG_LEDS_MSM_GPIO_FLASH=y
 # CONFIG_LEDS_DAC124S085 is not set
 # CONFIG_LEDS_PWM is not set
 # CONFIG_LEDS_REGULATOR is not set
@@ -4172,3 +4172,5 @@ CONFIG_LIBFDT=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 CONFIG_STRICT_MEMORY_RWX=y
+# Enable KCAL support
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
