Add and change default TCP cong algorithm to Westwood/Removed unsupported NFS file system to prevent bootloop

--- a/arch/arm64/configs/kinzie_defconfig
+++ b/arch/arm64/configs/kinzie_defconfig
@@ -510,9 +510,11 @@ CONFIG_INET_LRO=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
-# CONFIG_TCP_CONG_ADVANCED is not set
-CONFIG_TCP_CONG_CUBIC=y
-CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_BIC=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_DEFAULT_WESTWOOD=y
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
@@ -3764,8 +3766,7 @@ CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_FS_ENCRYPTION is not set
 # CONFIG_F2FS_FAULT_INJECTION is not set
 CONFIG_NETWORK_FILESYSTEMS=y
-CONFIG_NFS_FS=y
-CONFIG_NFS_V3=y
+# CONFIG_NFS_FS=y
 # CONFIG_NFSD is not set
 # CONFIG_CEPH_FS is not set
 CONFIG_CIFS=y
