--- a/arch/arm64/configs/kinzie_defconfig
+++ b/arch/arm64/configs/kinzie_defconfig
@@ -510,11 +510,9 @@ CONFIG_INET_LRO=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
-CONFIG_TCP_CONG_ADVANCED=y
-CONFIG_TCP_CONG_BIC=y
-CONFIG_TCP_CONG_WESTWOOD=y
-CONFIG_TCP_CONG_HTCP=y
-CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_TCP_CONG_ADVANCED is not set
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
@@ -2836,32 +2834,33 @@ CONFIG_HID_GENERIC=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_ACRUX=y
 CONFIG_HID_APPLE=y
-# CONFIG_HID_APPLEIR=y
-CONFIG_HID_AUREAL=y
-CONFIG_HID_BELKIN=y
-CONFIG_HID_CHERRY=y
-CONFIG_HID_CHICONY=y
-CONFIG_HID_PRODIKEYS=y
-CONFIG_HID_CYPRESS=y
-CONFIG_HID_DRAGONRISE=y
-CONFIG_HID_EMS_FF=y
+# CONFIG_HID_APPLEIR is not set
+# CONFIG_HID_AUREAL=y
+# CONFIG_HID_BELKIN=y
+# CONFIG_HID_CHERRY=y
+# CONFIG_HID_CHICONY=y
+# CONFIG_HID_PRODIKEYS=y
+# CONFIG_HID_CYPRESS=y
+# CONFIG_HID_DRAGONRISE=y
+
+# CONFIG_HID_EMS_FF=y
 CONFIG_HID_ELECOM=y
-CONFIG_HID_EZKEY=y
-CONFIG_HID_HOLTEK=y
-CONFIG_HID_KEYTOUCH=y
-CONFIG_HID_KYE=y
-CONFIG_HID_UCLOGIC=y
-CONFIG_HID_WALTOP=y
-CONFIG_HID_GYRATION=y
-CONFIG_HID_ICADE=y
-CONFIG_HID_TWINHAN=y
-CONFIG_HID_KENSINGTON=y
-CONFIG_HID_LCPOWER=y
-CONFIG_HID_LENOVO_TPKBD=y
-CONFIG_HID_LOGITECH=y
+# CONFIG_HID_EZKEY=y
+# CONFIG_HID_HOLTEK=y
+# CONFIG_HID_KEYTOUCH=y
+# CONFIG_HID_KYE=y
+# CONFIG_HID_UCLOGIC=y
+# CONFIG_HID_WALTOP=y
+# CONFIG_HID_GYRATION=y
+# CONFIG_HID_ICADE=y
+# CONFIG_HID_TWINHAN is not set
+# CONFIG_HID_KENSINGTON is not set
+# CONFIG_HID_LCPOWER is not set
+# CONFIG_HID_LENOVO_TPKBD=y
+# CONFIG_HID_LOGITECH=y
 CONFIG_HID_MAGICMOUSE=y
 CONFIG_HID_MICROSOFT=y
-CONFIG_HID_MONTEREY=y
+# CONFIG_HID_MONTEREY=y
 CONFIG_HID_MULTITOUCH=y
 # CONFIG_HID_NTRIG is not set
 CONFIG_HID_ORTEK=y
@@ -2875,13 +2874,11 @@ CONFIG_HID_SAITEK=y
 CONFIG_HID_SAMSUNG=y
 CONFIG_HID_SONY=y
 CONFIG_HID_SPEEDLINK=y
-CONFIG_HID_STEELSERIES=y
 CONFIG_HID_SUNPLUS=y
 CONFIG_HID_GREENASIA=y
 CONFIG_HID_SMARTJOYPLUS=y
 CONFIG_HID_TIVO=y
 CONFIG_HID_TOPSEED=y
-CONFIG_HID_THINGM=y
 CONFIG_HID_THRUSTMASTER=y
 CONFIG_HID_WACOM=y
 CONFIG_HID_WIIMOTE=y
