This helps saving more memory and helps overall system performance when ZRAM is enabled

--- a/arch/arm64/configs/kinzie_defconfig
+++ b/arch/arm64/configs/kinzie_defconfig
@@ -356,7 +356,7 @@ CONFIG_CLEANCACHE=y
 # CONFIG_FRONTSWAP is not set
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
 CONFIG_ZCACHE=y
-# CONFIG_BALANCE_ANON_FILE_RECLAIM is not set
+CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 CONFIG_PROCESS_RECLAIM=y
