--- a/arch/arm64/configs/kinzie_defconfig
+++ b/arch/arm64/configs/kinzie_defconfig
@@ -3851,7 +3851,7 @@ CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 # CONFIG_DETECT_HUNG_TASK is not set
 CONFIG_SCHED_DEBUG=y
-CONFIG_SYSRQ_SCHED_DEBUG=y
+# CONFIG_SYSRQ_SCHED_DEBUG is not set
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
